avoid wrapping in expanded-search-top. fixed count width.

--- a/app/assets/stylesheets/_advanced_search.scss
+++ b/app/assets/stylesheets/_advanced_search.scss
@@ -18,9 +18,12 @@ form.advanced-search {
 
 .expanded-search-top {
   display: flex;
+  white-space: nowrap;
 
   .count {
     margin-right: 20px;
+    min-width: 170px;
+    display: inline-block;
   }
 
   .sorting-select {
